issue #1249 - Adjust sidebar padding for better alignment of collapse button.

--- a/packages/seed-bible/seed-bible/app/main.css
+++ b/packages/seed-bible/seed-bible/app/main.css
@@ -383,6 +383,8 @@ h6 {
   overflow: hidden;
   position: relative;
   padding: 5px;
+  /* padding-left: 0px; */
+  margin-left: -10px;
 }
 
 .sb-attached-pane-resize-handle {
@@ -2772,7 +2774,7 @@ h6 {
 .sb-tabs-sidebar-collapsed {
   width: 56px;
   padding: 10px 8px 16px;
-  padding-left: 23px; /* center the collapse button in the collapsed sidebar */
+  padding-left: 12.5px; /* center the collapse button in the collapsed sidebar */
 
   .sb-sidebar-top-row {
     justify-content: center;
